--- a/my-app/src/styles/Deck.css
+++ b/my-app/src/styles/Deck.css
@@ -119,7 +119,7 @@ h5:last-of-type {
   font-weight: 700;
   border-radius: 20px;
   opacity: 0;
-  transition: all 0.4s;
+  transition: all 0.2s;
 }
 
 .messageDislike{
@@ -129,4 +129,7 @@ h5:last-of-type {
 .messageLike{
   left: 20px;
   background-color: salmon;
+}
+.opacityOne{
+  opacity: 1 !important;
 }
