--- a/my-app/src/components/Swipe/styles/Deck.css
+++ b/my-app/src/components/Swipe/styles/Deck.css
@@ -12,7 +12,7 @@ body {
 }
 
 #root .main-page{
-  background-image: url("../main-background.jpg");
+  background-image: url("../../../main-background.jpg");
   height: 100vh;
   width: 100vw;
   background-repeat: no-repeat;
@@ -24,7 +24,7 @@ body {
 #root .deck {
   position: absolute;
   width: 100vw;
-  height: 5vh;
+  height: 100vh;
   will-change: transform;
   display: flex;
   align-items: center;
