--- a/my-app/src/components/Profile/css/style.scss
+++ b/my-app/src/components/Profile/css/style.scss
@@ -1,4 +1,9 @@
 .profile{
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background: white;
+  padding-bottom: 86px;
+
   &__img{
     border-radius: 50%;
     width: 20%;
@@ -10,7 +15,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 50px;
+    padding: 50px;
   }
 
   &__info{
@@ -34,8 +39,28 @@
 
 
   &__circle-btn{
-    border-radius: 30px;
+    border-radius: 50%;
+    background: #dadfe6;
+    padding: 10px;
+    border: 1px solid #dadfe6;
+  }
+
+  &__camera{
+    fill: #dadfe6;
+  }
+
+  &__circle-btn-blue{
+    border-radius: 50%;
+    background: blue;
     border: 1px solid blue;
-    color: blue;
+    position: relative;
+    top: 50px;
+    padding: 10px;
+  }
+
+  &__bottom{
+    display: flex;
+    justify-content: space-around;
+    height: 100px;
   }
 }
