--- a/my-app/src/styles/Deck.css
+++ b/my-app/src/styles/Deck.css
@@ -6,7 +6,7 @@ html,
 body {
   user-select: none;
   font-family: Raleway, sans-serif;
-  background-color: #dadfe6;
+  background-color: cornflowerblue;
   overflow-x: hidden;
 
 }
