--- a/my-app/src/components/Profile/css/style.scss
+++ b/my-app/src/components/Profile/css/style.scss
@@ -82,4 +82,11 @@
     justify-content: space-around;
     height: 100px;
   }
+
+  &__form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
