--- a/my-app/src/components/Swipe/styles/Deck.css
+++ b/my-app/src/components/Swipe/styles/Deck.css
@@ -24,8 +24,9 @@ body {
 #root .deck {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  top: 100px;
   will-change: transform;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
