--- a/my-app/src/components/Register/register.scss
+++ b/my-app/src/components/Register/register.scss
@@ -27,6 +27,28 @@
     margin-top: 24px;
     display: flex;
   }
+  &__flex input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+  }
+  &__flex label {
+    display: inline-block;
+    background-color: #f6f7fa;
+    padding: 15px 18px;
+    font-size: 12px;
+    border: 2px solid #707d86;
+    border-radius: 8px;
+    color: grey;
+    margin-right: 10px;
+    margin-bottom: 25px;
+    font-weight: bold;
+  }
+  &__flex input[type="radio"]:checked + label {
+    color:  cornflowerblue;
+    border-color: cornflowerblue;
+    background-color: #efefef;
+  }
   &__svg{
     fill: lightslategray;
     position: relative;
@@ -47,16 +69,6 @@
     position: relative;
     width: 280px;
   }
-  &__gender{
-    padding: 15px 13px;
-    margin-bottom: 25px;
-    border-radius: 8px;
-    border: 2px solid grey;
-    margin-right: 10px;
-    outline: none;
-    background-color: white;
-    color: grey;
-  }
   &__date{
     width: 68px;
     margin-right: 10px;
@@ -72,11 +84,6 @@
   &__all-inputs:focus{
     border:2px solid #707d86;
   }
-  &__gender:focus{
-    color: #424242;
-    border-color: grey;
-    background-color: #efefef;
-  }
   &__btn{
     padding: 10px 15px;
     border-radius: 18px;
@@ -88,14 +95,24 @@
     color: white;
     margin: 45px 0;
   }
-  &__btn:hover{
-    background-color: #e0e4e9;
-    color: cornflowerblue;
-  }
   &__date:last-child{
     margin-right: 0;
   }
 }
+.login__btn:hover{
+  background-color: #e0e4e9;
+  color: cornflowerblue;
+}
 input[type="file"] {
   display: none;
+}
+input.error {
+  border: 1px solid #EADAE4;
+}
+.login__btn:disabled{
+  background-color: grey;
+}
+.error {
+  color:#db2269;
+  font-size: 0.625em;
 }
