--- a/my-app/src/components/Edit/css/style.scss
+++ b/my-app/src/components/Edit/css/style.scss
@@ -29,7 +29,7 @@
     display: flex;
   }
   &__svg{
-    fill: #e0e4e9;
+    fill: lightslategrey;
     position: relative;
     top: 35px;
     left: 15px;
