--- a/my-app/src/components/Header/css/style.scss
+++ b/my-app/src/components/Header/css/style.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   background: white;
+  padding: 5px;
 
   &__svg-grey{
     fill: lightslategrey;
