--- a/my-app/src/components/Profile/css/style.scss
+++ b/my-app/src/components/Profile/css/style.scss
@@ -6,8 +6,8 @@
 
   &__img{
     border-radius: 50%;
-    width: 20%;
-    height: 20%;
+    width: 150px;
+    height: 150px;
   }
 
   &__top{
@@ -76,14 +76,15 @@
     top: 39px;
     left: 36px;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0 0 1px 1px lightslategrey;
   }
 
   &__plus::after{
     content: "\002B";
     color: cornflowerblue;
-    position: relative;
-    bottom: 6px;
     font-size: 24px;
   }
 
